@@ -11,6 +11,7 @@
           in favor of --skip-inline-token-annotations
         - Improve script handling of broken data
         - Improve handling of unknown header types
+        - Check for valid sigles to avoid broken directories
 
 1.00 2021-02-18 Release
         - -s option added that uses sentence boundaries
